<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_widget_responsive">Responsive</string>
    <string name="app_widget_responsive_desc">A widget that adapts its layout to different sizes</string>
    <string name="app_widget_card">Card</string>
    <string name="app_widget_card_desc">Minimalist and simplified style</string>
    <string name="app_widget_full">Full</string>
    <string name="app_widget_full_desc">The player screen directly on your desktop</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_shuffle_play">Shuffle play</string>
    <string name="action_queue_next">Queue next</string>
    <string name="shuffle_all_label">Shuffle all</string>
    <string name="shuffle_mode">Shuffle mode</string>
    <string name="repeat_mode">Repeat mode</string>
    <string name="shuffle_button_tip">Tap for normal shuffle. Long press for advanced options.</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_pause">Pause</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Previous</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_seek_backward">Seek backward</string>
    <string name="action_seek_forward">Seek forward</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="reset_action">Reset</string>
    <string name="action_more">More</string>
    <string name="playing_queue_label">Playing queue</string>
    <string name="appearance_title">Appearance</string>
    <string name="appearance_summary">Change the app\'s theme and other visual settings.</string>
    <string name="now_playing_title">Now playing</string>
    <string name="now_playing_summary">Customize the now playing screen.</string>
    <string name="lyrics_preferences_title">Lyrics</string>
    <string name="lyrics_preferences_summary">Adjust font, spacing, and other options to personalize your lyrics view.</string>
    <string name="playback_title">Playback</string>
    <string name="playback_summary">Change the sound settings, Bluetooth headsets, etc.</string>
    <string name="library_title">Library</string>
    <string name="library_summary">Settings for playlists and exclusion/inclusion filters.</string>
    <string name="network_title">Network</string>
    <string name="network_summary">Manage internet features such as Last.fm integration, lyrics providers, and metadata downloads.</string>
    <string name="advanced_title">Advanced</string>
    <string name="advanced_summary">In-app language and other settings for advanced users.</string>
    <string name="about_title">About</string>
    <string name="album_cover_header">Cover</string>
    <string name="controls_header">Controls</string>
    <string name="gestures_header">Gestures</string>
    <string name="headphones_header">Headphones</string>
    <string name="bluetooth_header">Bluetooth</string>
    <string name="audio_focus_header">Audio focus</string>
    <string name="shuffle_mode_header">Shuffle mode</string>
    <string name="display_header">Display</string>
    <string name="now_playing_screen_title">Style</string>
    <string name="open_on_play_title">Open on play</string>
    <string name="open_on_play_summary">Expand the Now Playing panel automatically after start playing a song.</string>
    <string name="squiggly_seek_bar_title">Squiggly seek bar</string>
    <string name="squiggly_seek_bar_summary">Enable a wavy seek bar instead of the default slider.</string>
    <string name="scrolling_text_title">Enable scrolling text</string>
    <string name="scrolling_text_summary">Scrolls song titles when too long to fit. May use slightly more battery.</string>
    <string name="extra_controls_title">Extra controls</string>
    <string name="extra_controls_summary">Add extra controls for mini player</string>
    <string name="adaptive_controls_title">Adaptive controls</string>
    <string name="adaptive_controls_summary">The controls on the mini player change to suit the current player style.</string>
    <string name="swipe_to_dismiss_title">Swipe down to dismiss</string>
    <string name="swipe_to_dismiss_summary">Swipe down on the mini player to stop playback and clear the playing queue.</string>
    <string name="circle_button_title">Circular play button</string>
    <string name="swipe_album_cover_title">Swipe on album cover</string>
    <string name="swipe_album_cover_summary">Swipe left or right on the album cover to skip between songs.</string>
    <string name="mini_player_swipe_to_skip_title">Swipe mini player to skip</string>
    <string name="mini_player_swipe_to_skip_summary">Swipe left or right on the mini player to skip between songs.</string>
    <string name="queue_height_title">Half-screen queue height</string>
    <string name="queue_height_summary">Fix the playback queue height to half of the screen.</string>
    <string name="single_tap_on_album_cover_title">Single tap on cover</string>
    <string name="double_tap_on_album_cover_title">Double tap on cover</string>
    <string name="double_tap_on_left_album_cover_title">Left album-cover edge double-tap</string>
    <string name="double_tap_on_right_album_cover_title">Right album-cover edge double-tap</string>
    <string name="long_press_on_album_cover_title">Long press on cover</string>
    <string name="small_image_title">Small image</string>
    <string name="small_image_summary">Reduces the cover size in supported styles.</string>
    <string name="now_playing_corner_radius_title">Image corner radius</string>
    <string name="now_playing_corner_radius_summary">Defines how rounded the corners of the album art should appear.</string>
    <string name="carousel_effect_title">Carousel effect</string>
    <string name="animate_controls_title">Animate controls</string>
    <string name="animate_controls_summary">It\'s played when opening the player panel.</string>
    <string name="swipe_anywhere_title">Swipe anywhere to change song</string>
    <string name="swipe_anywhere_summary">Swipe left or right on any empty area of the now playing screen to switch between songs.</string>
    <string name="swipe_up_queue_title">Swipe upwards to open queue</string>
    <string name="swipe_up_queue_summary">Swipe upwards on any empty area of the now playing screen to open the playing queue.</string>
    <string name="display_album_name_title">Display album name</string>
    <string name="display_extra_info_title">Display extra info</string>
    <string name="display_extra_info_summary">Display extra info about the song, like bitrate, format, sampling rate, etc.</string>
    <string name="display_next_song_title">Display next song</string>
    <string name="display_next_song_summary">Show the next song in Normal and Full Cover styles.
        If you disable this, the playback queue will only be accessible from the player\'s three-dot menu.</string>
    <string name="select_extra_info_title">Extra info</string>
    <string name="select_extra_info_summary">Select the extra info to display in the player panel.</string>
    <string name="prefer_remaining_time_title">Prefer remaining time</string>
    <string name="prefer_remaining_time_summary">Display remaining time instead of the song\'s duration.</string>
    <string name="prefer_album_artist_name_title">"Prefer Album-artist's name"</string>
    <string name="prefer_album_artist_name_summary">Shows the Album-artist\'s name instead of Song-artist\'s name (if available).</string>
    <string name="player_blur_intensity_title">Blur intensity</string>
    <string name="player_blur_intensity_summary">Adjust how strong the background blur appears in the Blur theme. Lower values may improve performance.</string>
    <string name="play_on_startup_title">Play on startup</string>
    <string name="queue_next_mode_title">\"Queue next\" mode</string>
    <string name="remember_shuffle_mode_title">Remember Shuffle</string>
    <string name="remember_shuffle_mode_summary">Shuffle mode will stay on when selecting a new list of songs.</string>
    <string name="album_shuffle_mode_title">Album shuffle mode</string>
    <string name="artist_shuffle_mode_title">Artist shuffle mode</string>
    <string name="rewind_with_back_title">"Rewind with 'Previous'"</string>
    <string name="rewind_with_back_summary">Rewind the playing track to the start or move to previous track if the current one is in the beginning.</string>
    <string name="rewind_fast_forward_amount_title">Rewind/Fast-forward amount</string>
    <string name="rewind_fast_forward_amount_summary">Time (in seconds) to rewind or fast-forward using UI or external controls.</string>
    <string name="resume_on_connect_title">Resume on connect</string>
    <string name="resume_on_connect_summary">Resumes playback when headphone is connected.</string>
    <string name="pause_on_disconnect_title">Pause on disconnect</string>
    <string name="pause_on_disconnect_summary">Pauses playback when headphone is disconnected. Recommended.</string>
    <string name="resume_on_bluetooth_connect_title">Resume on bluetooth connect</string>
    <string name="resume_on_bluetooth_connect_summary">Resumes playback when Bluetooth A2DP headset is connected.</string>
    <string name="pause_on_bluetooth_disconnect_title">Pause on bluetooth disconnect</string>
    <string name="pause_on_bluetooth_disconnect_summary">Pauses playback when Bluetooth A2DP headset is disconnected. Recommended.</string>
    <string name="ignore_audio_focus_title">Ignore audio focus</string>
    <string name="ignore_audio_focus_summary">Always play audio in background regardless of anything else being played.</string>
    <string name="pause_on_zero_volume_title">Pause on zero volume</string>
    <string name="pause_on_zero_volume_summary">Pauses the song when the volume decreases to zero and starts playing back when the volume level rises. Also works outside the app.</string>
    <string name="mp3_index_seeking_title">MP3 index seeking</string>
    <string name="mp3_index_seeking_summary">Loads the entire MP3 file into memory for seeking instead of relying on the Xing header.
        Use only if seeking fails on some VBR files.
        Requires app restart.</string>
    <string name="play_option_always_visible_title">Keep \"Play\" option visible</string>
    <string name="play_option_always_visible_summary">If enabled, the \"Play\" option will always appear in a song\'s menu, regardless of tap behavior settings.</string>
    <string name="play_option_whole_list_title">"Play" option plays whole list</string>
    <string name="play_option_whole_list_summary">If enabled, selecting \"Play\" from a song\'s menu will start playback of the entire playlist. If disabled, only the chosen song will play.</string>
    <string name="on_song_click_title">When selecting a song</string>
    <string name="on_clear_queue_title">When clearing the queue</string>
    <string name="clear_queue_on_completion_title">Clear queue when playback finishes</string>
    <string name="clear_queue_on_completion_summary">Automatically remove all songs from the queue after the last track finishes playing.</string>
    <string name="notification_mode_title">Notification mode</string>
    <string name="notification_mode_summary">Choose how the notification displays during playback.</string>
    <string name="stop_when_closed_from_recents_title">Stop when closed from recents</string>
    <string name="stop_when_closed_from_recents_summary">Playback stops if the app is closed from the recents list.</string>
    <string name="stop_when_closed_from_recents_note">Note: Some devices with aggressive memory
        or battery management may ignore this setting and always stop the app when removed from recents.</string>
</resources>