<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.mardous.booming.ui.component.preferences.CustomDialogPreference
        app:icon="@drawable/ic_play_circle_24dp"
        app:title="@string/now_playing_screen_title"
        app:layout="@layout/list_item_view"
        app:key="now_playing_screen" />

    <PreferenceCategory
        app:title="@string/album_cover_header"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_view_carousel_24dp"
            app:title="@string/carousel_effect_title"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="carousel_effect" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/small_image_title"
            app:summary="@string/small_image_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="now_playing_small_image" />

        <SeekBarPreference
            app:icon="@drawable/ic_rounded_corner_24dp"
            app:title="@string/now_playing_corner_radius_title"
            app:summary="@string/now_playing_corner_radius_summary"
            android:max="48"
            app:min="0"
            app:defaultValue="@integer/now_playing_corner_radius"
            app:showSeekBarValue="true"
            app:layout="@layout/list_item_view_bottom_widget"
            app:widgetLayout="@layout/preference_seekbar"
            app:key="now_playing_corner_radius"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/gestures_header"
        app:layout="@layout/preference_category_title">

        <com.mardous.booming.ui.component.preferences.CustomDialogPreference
            app:iconSpaceReserved="true"
            app:title="@string/single_tap_on_album_cover_title"
            app:layout="@layout/list_item_view"
            app:key="cover_single_tap_action" />

        <com.mardous.booming.ui.component.preferences.CustomDialogPreference
            app:iconSpaceReserved="true"
            app:title="@string/double_tap_on_album_cover_title"
            app:layout="@layout/list_item_view"
            app:key="cover_double_tap_action" />

        <com.mardous.booming.ui.component.preferences.CustomDialogPreference
            app:iconSpaceReserved="true"
            app:title="@string/double_tap_on_left_album_cover_title"
            app:layout="@layout/list_item_view"
            app:key="cover_left_double_tap_action" />

        <com.mardous.booming.ui.component.preferences.CustomDialogPreference
            app:iconSpaceReserved="true"
            app:title="@string/double_tap_on_right_album_cover_title"
            app:layout="@layout/list_item_view"
            app:key="cover_right_double_tap_action" />

        <com.mardous.booming.ui.component.preferences.CustomDialogPreference
            app:iconSpaceReserved="true"
            app:title="@string/long_press_on_album_cover_title"
            app:layout="@layout/list_item_view"
            app:key="cover_long_press_action" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/swipe_album_cover_title"
            app:summary="@string/swipe_album_cover_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="swipe_on_cover" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/swipe_anywhere_title"
            app:summary="@string/swipe_anywhere_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="swipe_anywhere" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/mini_player_swipe_to_skip_title"
            app:summary="@string/mini_player_swipe_to_skip_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="mini_player_swipe_to_skip" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/swipe_up_queue_title"
            app:summary="@string/swipe_up_queue_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="swipe_up_queue" />

        <SwitchPreferenceCompat
            app:title="@string/swipe_to_dismiss_title"
            app:summary="@string/swipe_to_dismiss_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="swipe_down_to_dismiss" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/controls_header"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:title="@string/circle_button_title"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="circle_play_button" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/adaptive_controls_title"
            app:summary="@string/adaptive_controls_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="adaptive_controls" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/animate_controls_title"
            app:summary="@string/animate_controls_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="animate_player_control" />

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_next_24dp"
            app:title="@string/extra_controls_title"
            app:summary="@string/extra_controls_summary"
            app:defaultValue="@bool/is_tablet"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="add_extra_controls" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/display_header"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_squiggly_seekbar_24dp"
            app:title="@string/squiggly_seek_bar_title"
            app:summary="@string/squiggly_seek_bar_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="squiggly_seek_bar" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/queue_height_title"
            app:summary="@string/queue_height_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="queue_height" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/scrolling_text_title"
            app:summary="@string/scrolling_text_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="enable_scrolling_text" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/prefer_remaining_time_title"
            app:summary="@string/prefer_remaining_time_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="prefer_remaining_time" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/prefer_album_artist_name_title"
            app:summary="@string/prefer_album_artist_name_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="prefer_album_artist_name_on_np" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/display_album_name_title"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="display_album_title" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/display_next_song_title"
            app:summary="@string/display_next_song_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="display_next_song" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/display_extra_info_title"
            app:summary="@string/display_extra_info_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="display_extra_info" />

        <com.mardous.booming.ui.component.preferences.CustomDialogPreference
            app:iconSpaceReserved="true"
            app:title="@string/select_extra_info_title"
            app:summary="@string/select_extra_info_summary"
            app:persistent="false"
            app:dependency="display_extra_info"
            app:layout="@layout/list_item_view"
            app:key="now_playing_extra_info" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/advanced_title"
        app:layout="@layout/preference_category_title">

        <SeekBarPreference
            app:icon="@drawable/ic_blur_linear_24dp"
            app:title="@string/player_blur_intensity_title"
            app:summary="@string/player_blur_intensity_summary"
            android:max="@integer/max_player_blur"
            app:min="@integer/min_player_blur"
            app:defaultValue="@integer/max_player_blur"
            app:showSeekBarValue="true"
            app:layout="@layout/list_item_view_bottom_widget"
            app:widgetLayout="@layout/preference_seekbar"
            app:key="player_blur_radius"/>

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_keyboard_arrow_up_24dp"
            app:title="@string/open_on_play_title"
            app:summary="@string/open_on_play_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="open_on_play" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
