<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:iconSpaceReserved="true"
        app:title="@string/play_on_startup_title"
        app:useSimpleSummaryProvider="true"
        app:entries="@array/pref_play_on_startup_entries"
        app:entryValues="@array/pref_play_on_startup_values"
        app:defaultValue="never"
        app:layout="@layout/list_item_view"
        app:key="play_on_startup_mode"/>

    <PreferenceCategory
        app:title="@string/playing_queue_label"
        app:layout="@layout/preference_category_title">

        <ListPreference
            app:icon="@drawable/ic_queue_play_next_24dp"
            app:title="@string/queue_next_mode_title"
            app:entries="@array/queue_next_mode_entries"
            app:entryValues="@array/queue_next_mode_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="1"
            app:layout="@layout/list_item_view"
            app:key="queue_next_mode"/>

        <com.mardous.booming.ui.component.preferences.CustomDialogPreference
            app:icon="@drawable/ic_touch_app_24dp"
            app:title="@string/on_song_click_title"
            app:useSimpleSummaryProvider="false"
            app:persistent="false"
            app:layout="@layout/list_item_view"
            app:key="on_song_click_action"/>

        <com.mardous.booming.ui.component.preferences.CustomDialogPreference
            app:icon="@drawable/ic_clear_all_24dp"
            app:title="@string/on_clear_queue_title"
            app:useSimpleSummaryProvider="false"
            app:persistent="false"
            app:layout="@layout/list_item_view"
            app:key="on_clear_queue_action"/>

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_play_24dp"
            app:title="@string/play_option_always_visible_title"
            app:summary="@string/play_option_always_visible_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="play_option_always_visible"/>

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_playlist_play_24dp"
            app:title="@string/play_option_whole_list_title"
            app:summary="@string/play_option_whole_list_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="play_option_whole_list"/>

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/clear_queue_on_completion_title"
            app:summary="@string/clear_queue_on_completion_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="clear_queue_on_completion"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/now_playing_title"
        app:layout="@layout/preference_category_title">

        <ListPreference
            app:icon="@drawable/ic_notifications_24dp"
            app:title="@string/notification_mode_title"
            app:summary="@string/notification_mode_summary"
            app:entries="@array/notification_mode_entries"
            app:entryValues="@array/notification_mode_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="media"
            app:layout="@layout/list_item_view"
            app:key="notification_mode"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/shuffle_mode_header"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_shuffle_24dp"
            app:title="@string/remember_shuffle_mode_title"
            app:summary="@string/remember_shuffle_mode_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="remember_shuffle_mode"/>

        <ListPreference
            app:icon="@drawable/ic_album_24dp"
            app:title="@string/album_shuffle_mode_title"
            app:entries="@array/pref_album_shuffle_mode_entries"
            app:entryValues="@array/pref_album_shuffle_mode_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="shuffle_albums"
            app:layout="@layout/list_item_view"
            app:key="album_shuffle_mode"/>

        <ListPreference
            app:icon="@drawable/ic_artist_24dp"
            app:title="@string/artist_shuffle_mode_title"
            app:entries="@array/pref_artist_shuffle_mode_entries"
            app:entryValues="@array/pref_artist_shuffle_mode_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="shuffle_all"
            app:layout="@layout/list_item_view"
            app:key="artist_shuffle_mode"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/controls_header"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/rewind_with_back_title"
            app:summary="@string/rewind_with_back_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="rewind_with_back"/>

        <SeekBarPreference
            app:icon="@drawable/ic_fast_forward_24dp"
            app:title="@string/rewind_fast_forward_amount_title"
            app:summary="@string/rewind_fast_forward_amount_summary"
            android:max="60"
            app:min="5"
            app:defaultValue="10"
            app:showSeekBarValue="true"
            app:layout="@layout/list_item_view_bottom_widget"
            app:widgetLayout="@layout/preference_seekbar"
            app:key="seek_interval"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/headphones_header"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_headphones_24dp"
            app:title="@string/resume_on_connect_title"
            app:summary="@string/resume_on_connect_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="resume_on_connect"/>

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/pause_on_disconnect_title"
            app:summary="@string/pause_on_disconnect_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="pause_on_disconnect"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/bluetooth_header"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_media_bluetooth_on_24dp"
            app:title="@string/resume_on_bluetooth_connect_title"
            app:summary="@string/resume_on_bluetooth_connect_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="resume_on_bluetooth_connect"/>

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/pause_on_bluetooth_disconnect_title"
            app:summary="@string/pause_on_bluetooth_disconnect_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="pause_on_bluetooth_disconnect"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/audio_focus_header"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_pause_24dp"
            app:title="@string/ignore_audio_focus_title"
            app:summary="@string/ignore_audio_focus_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="ignore_audio_focus"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/advanced_title"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_volume_down_24dp"
            app:title="@string/pause_on_zero_volume_title"
            app:summary="@string/pause_on_zero_volume_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="pause_on_zero_volume"/>

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/mp3_index_seeking_title"
            app:summary="@string/mp3_index_seeking_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="mp3_index_seeking"/>

        <SwitchPreferenceCompat
            app:title="@string/stop_when_closed_from_recents_title"
            app:summary="@string/stop_when_closed_from_recents_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="stop_when_closed_from_recents"/>

        <Preference
            app:summary="@string/stop_when_closed_from_recents_note"
            app:persistent="false"
            app:selectable="false"
            app:layout="@layout/list_item_view"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>